fix CoverStory title Font

--- a/css/main.css
+++ b/css/main.css
@@ -399,18 +399,19 @@ section {
   max-width: 1440px;
   margin: 0 auto;
   padding: 20px 80px 40px 80px;
-  color: #000;
 }
 
 .cover .coverText h1 {
   line-height: 2;
+  font-size: 2em;
 }
 
 .cover .coverText p {
   font-weight: 700;
   line-height: 1.3;
   /* letter-spacing:-0.03em; */
-  font-size: 20px;
+  font-size: 1.5em;
+  color: #ffffff;
 }
 
 
